<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/menuFragment">

    <fragment
        android:id="@+id/permissionFragment"
        android:name="io.github.dleprovost.ringtonewidgets.PermissionFragment"
        android:label="@string/permission_required"
        tools:layout="@layout/fragment_permission"/>

    <fragment
        android:id="@+id/menuFragment"
        android:name="io.github.dleprovost.ringtonewidgets.MenuFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_menu">
        <action
            android:id="@+id/action_menuFragment_to_colorFragment"
            app:destination="@id/colorFragment" />
        <action
            android:id="@+id/action_menuFragment_to_aboutFragment"
            app:destination="@id/aboutFragment" />
    </fragment>

    <fragment
        android:id="@+id/colorFragment"
        android:name="io.github.dleprovost.ringtonewidgets.ColorFragment"
        android:label="@string/color_choice"
        tools:layout="@layout/fragment_color">
        <argument
            android:name="colorId"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/aboutFragment"
        android:name="io.github.dleprovost.ringtonewidgets.AboutFragment"
        android:label="@string/about"
        tools:layout="@layout/fragment_about"/>
</navigation>
